VIITE-3585 Fixed alignment (#1877)

--- a/viite-UI/src/less/core/forms.less
+++ b/viite-UI/src/less/core/forms.less
@@ -322,6 +322,12 @@ form.roadAddressProject .form-control.small-input{
   margin-right: 11px;
 }
 
+#reservedDiscontinuity,
+#newReservedDiscontinuity {
+  white-space: nowrap;
+  width: 80px;
+}
+
 form.roadAddressProject .form-control,
 form.roadAddressProject .action-select{
   width: 190px !important;
